README edited online with Bitbucket

--- a/README
+++ b/README
@@ -1,4 +1,6 @@
-# Relaxing Assumptions about Voter Utilities and Majority Rule Efficiency #
+Working Paper / Project:
+
+# How the Nature of Political Preferences Shapes the Efficiency of Majority Rule Voting #
 
 ## Relaxing Assumptions about Voter Utilities ##
 
