--- a/draft/ideal_draft.tex
+++ b/draft/ideal_draft.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt]{paper}
+\documentclass[12pt]{article}
 \usepackage[top=1in, bottom= 1in, left= 1in, right= 1in]{geometry}
 \usepackage[USenglish]{babel} % set the language; greek allows \textgreek{\euro}
 \usepackage{multirow} % For tables
@@ -20,27 +20,23 @@
 \setlength{\headheight}{15pt}
 % http://en.wikibooks.org/wiki/LaTeX/Page_Layout for additional info
 
-\author{Peter DeScioli \and Patrick W. Kraft}
-\institution{Stony Brook University \\ {\footnotesize \href{mailto:patrick.kraft@stonybrook.edu}{patrick.kraft@stonybrook.edu}}}
-
+\author{Peter DeScioli\thanks{\href{mailto:pdescioli@gmail.com}{pdescioli@gmail.com}} \and
+		Patrick W. Kraft\thanks{\href{mailto:patrick.kraft@stonybrook.edu}{patrick.kraft@stonybrook.edu}} }
 \title{{\small Working Paper}\\
-How the Nature of Political Preferences Shapes the Efficiency of Majority Rule Voting}
-\subtitle{Relaxing Assumptions about Voter Utilities}
-\date{\today}
+How the Nature of Political Preferences Shapes the Efficiency of Majority Rule Voting \\
+{\large Relaxing Assumptions about Voter Utilities}}
+\date{Stony Brook University \vspace{1cm}\\ \today}
 
 
 \begin{document}
 \maketitle
 
-\hrule
-\begin{abstract}%\onehalfspacing
+\begin{abstract}\onehalfspacing
 Traditional models of issue voting assume that voters and candidates can be placed on a single policy dimension and the voters' utilities can be determined by the relative proximity of their ideal points to the respective candidates \citep[c.f.][]{downs1957economic}. In such a framework, simple majority elections between two candidates are generally expected to lead to desirable outcomes that maximize social welfare. The goal of this paper is to examine how the underlying assumption of voter utilities based on common policy dimensions affect the expected welfare outcomes of majority voting. More specifically, we present simulational studies as well as an experimental design in order to examine the efficiency of majority elections under different scenarios. We hope to illustrate how the assumptions underlying the ideal-point framework influence the expected social welfare outcomes of voting rules.
-\end{abstract}
-\hrule
+\vspace{0.5cm}\\
+\textbf{Keywords:} Utility Assumptions, Majority Voting, Efficiency
 
-\begin{keywords}
-Utility Assumptions, Majority Voting, Efficiency
-\end{keywords}
+\end{abstract}
 
 \newpage
 \doublespacing
