simulations for draft

--- a/draft/pres/ideal_cbpe.tex
+++ b/draft/pres/ideal_cbpe.tex
@@ -42,8 +42,7 @@
 
 \author[DeScioli \& Kraft]{Peter DeScioli \and Patrick Kraft}
 \institute[Stony Brook]{Center for Behavioral Political Economy}
-\title[Voter Utilities and Majority Voting]{How the Nature of Political Preferences Shapes the Efficiency of Majority Rule Voting \\
-{\small Relaxing Assumptions about Voter Utilities}}
+\title[Voter Utilities and Majority Voting]{How the Nature of Political Preferences Shapes the Efficiency of Majority Rule Voting}
 \date{October 16, 2014}
 \titlegraphic{\includegraphics[width=3cm]{/data/Dropbox/1-src/logos/logo.pdf}}
 
@@ -56,18 +55,66 @@
 \begin{frame}%[allowframbreaks]
 \frametitle{Introduction}
 \begin{itemize}
-\item
+\item \cite{todorov2005inferences}
 \end{itemize}
 \end{frame}
 
-%\begin{frame}
-%  \frametitle{References}
-%  \def\newblock{\hskip .11em plus .33em minus .07em}
-%\nocite{*}
-%%  \begin{tiny}
-%\bibliographystyle{apsr}
-%\bibliography{Literature}
-%%  \end{tiny}
-%\end{frame}
+\subsection{}
+\begin{frame}%[allowframbreaks]
+  \frametitle{Political Preferences and Ideal Points}
+  \citet{downs1957economic}
+\end{frame}
+
+\subsection{}
+\begin{frame}%[allowframbreaks]
+  \frametitle{Majority Voting and Social Welfare}
+  \citet{hastie2005robust}
+\end{frame}
+
+\section{Simulation Results}
+\subsection{}
+\begin{frame}%[allowframbreaks]
+  \frametitle{}
+
+\end{frame}
+
+\section{Experimental Designs}
+\subsection{}
+\begin{frame}%[allowframbreaks]
+  \frametitle{}
+  \citet{oprea2007compensation}
+\end{frame}
+
+\section{Conclusion}
+\subsection{}
+\begin{frame}%[allowframbreaks]
+  \frametitle{}
+
+\end{frame}
+
+\subsection{}
+\begin{frame}
+  \frametitle{References}
+  \def\newblock{\hskip .11em plus .33em minus .07em}
+  %\nocite{*}
+%  \begin{tiny}
+  \bibliographystyle{apsr}
+  \bibliography{/data/Dropbox/1-src/lit/Literature}
+%  \end{tiny}
+\end{frame}
+
+\section{Appendix}
+\subsection{}
+\begin{frame}%[allowframbreaks]
+  \frametitle{}
+
+\end{frame}
+
+\subsection{}
+\begin{frame}%[allowframbreaks]
+  \frametitle{}
+
+\end{frame}
+
 
 \end{document}
