updated readme after meeting

--- a/README
+++ b/README
@@ -26,3 +26,18 @@ Utility Assumptions, Majority Voting, Efficiency
 	5. I would like to see a simple plot: proportion of "successful" runs (in terms of social utility aggregation) as a function of distribution parameters; perhaps, in addition to the heatmap.
 	6. When you present this you may want to talk more about why slides 17 has asymmetric (around zero) results. I did not quite get that. In fact, my immediate reaction was that you have some kind of a bug in your code...
 
+### Meeting Peter 12/10/2014: TO DOs
+- major question: can ideal-point utilities represent preferences?
+- inequality argument can be met with a social justice perspective from the beginning (i.e. if we want to redistribute money, it will increase the variance in utilities as well) -> inequality argument can be flipped the other way around...
+- write up simulational results
+- think about analytical solution for mean/median problem in normal distribution
+- start writing about potential experimental investigations (i.e. including electoral abstention etc.)
+- extensions for paper
+	- endogenize turnout in the simulation (1. moving far away from both candidates decreases turnout, 2. large difference b/w both candidates increases turnout)
+	- increase number of candidates
+	- increase number of issues: 2 candidates, 5 issues, candidates and voters either approve or disapprove of both candidates -> binomial distribution!
+		- same result as in continuous case?
+		- comparison of voting in pieces on each dimension vs. voting in a bundle (i.e. one of the candidates)
+		- likely conclusion: voting in pieces is better _unless_ agreement on one issue is cotingent on decision on other issue. issues should be broken apart as long as they are not connected or approval is conditional (essentially gets away from iid assumption)
+		- check combinatorial auction paper that accounts for that
+	- different voting rules: compare in simulation, e.g. primaries and general election
