--- a/pres/MPSA15p_majority_descioli_kraft.tex
+++ b/pres/MPSA15p_majority_descioli_kraft.tex
@@ -90,7 +90,7 @@
 \begin{frame}%[allowframebreaks]
 \frametitle{Voting, Ideal Points, and Utilities}
 \begin{itemize}
-  \item \emph{Spatial theory of voting} \citep[e.g.][]{downs1957economic,enelow1984spatial}:
+  \item \emph{Spatial theory of voting}\\\citep[e.g.][]{downs1957economic,enelow1984spatial}:
   \begin{itemize}
      \item common policy / ideological dimension
      \item utilities determined by relative \emph{proximity}
